Added hover effects to buttons and popular stay options, looking to integrate navigation to the pages defined in the navbar

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ html, body {
 
 @layer components {
 	.primary-btn {
-		@apply primary-bg-color secondary-txt-color p-[5px] rounded-[5px] 
+		@apply primary-bg-color secondary-txt-color p-[5px] rounded-[5px] hover:brightness-[80%] transition-all
 	}
 }
 
@@ -46,5 +46,9 @@ html, body {
 
 	.icon-bg {
 		background-color: #7468AD;
+	}
+
+	.primary-border {
+		border: 4px solid #AA9BE6;
 	}
   }
