--- a/src/index.css
+++ b/src/index.css
@@ -98,18 +98,18 @@ html, body {
 	width: 250px;
 }
 
-.container input[type="number"]::webkit-outer-spin-button,
-.container input[type="number"]::webkit-inner-spin-button {
+.range-container input[type="number"]::webkit-outer-spin-button,
+.range-container input[type="number"]::webkit-inner-spin-button {
 	-webkit-appearance: none;
 }
 
-.container .range-slider input[type="range"] {
+.range-container .range-slider input[type="range"] {
 	-webkit-appearance: none;
 	pointer-events: none;
 	background: none;
 }
 
-.container .range-slider input::-webkit-slider-thumb {
+.range-container .range-slider input::-webkit-slider-thumb {
 	pointer-events: auto;
 	-webkit-appearance: none;
 	width: 17px;
@@ -118,7 +118,9 @@ html, body {
 	border-radius: 50%;
 }
 
-
+.mobile.appear {
+	left: 0;
+}
 
 
 @keyframes spinner {
